@@ -1,3 +1,9 @@
+2002-09-11  Keith Seitz  <keiths@redhat.com>
+
+	* lib/mi-support.exp (mi_step_next_helper): Remove.
+	(mi_next): Use mi_next_to.
+	(mi_step): Use mi_step_to.
+
 2002-09-05  Keith Seitz  <keiths@redhat.com>
 
 	* lib/mi-support.exp (mi_runto): New proc. Does the same as gdb's
